Fixed scrollbar issue
Bootstrap's container-fluid class allowed for mobile devices to have a rather annoying scrollbar that was too large, resulting in the site's background appearing on the right side of the screen if a user zoomed out. This patched that "feature"

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
    Base styles
    ========================================================================== */
 
+.container-fluid {
+    padding: 0 15px;
+}
+
 html, body {
     height: 100%;
     width: 100%;
